added a searchform, added a modal. modal to replace tabContent, because not related to a tab button.

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -66,6 +66,7 @@
 @import 'components/scroll';
 @import 'components/thread';
 @import 'components/tab-box';
+@import 'components/modal';
 @import 'components/profile';
 @import 'components/packages';
 @import 'components/case';
