--- a/src/assets/scss/components/button.scss
+++ b/src/assets/scss/components/button.scss
@@ -106,7 +106,7 @@ button, .button, [type="button"], [type="reset"], [type="submit"] {
   margin-bottom: 0;
 	top: 0;
 	right: 0;
-	
+
   &:hover {
     background: none;
     color: $medium-gray;
@@ -116,7 +116,7 @@ button, .button, [type="button"], [type="reset"], [type="submit"] {
     color: $medium-gray;
 	}
 }
-.lightBg {
+.lightBg, .modalContent {
 	.close-button {
 	  color: $complementary-dark-color3;
 	  &:hover {
@@ -127,6 +127,7 @@ button, .button, [type="button"], [type="reset"], [type="submit"] {
 		}
 	}
 }
+
 
 
 
