--- a/src/assets/scss/components/nav.scss
+++ b/src/assets/scss/components/nav.scss
@@ -122,7 +122,7 @@
       margin: 0 0 0 10px;
     }
 
-    #navMainMenu .text, #navHome .text {
+    #navMainMenu .text, #navSearch .text, #navHome .text {
       display: none;
     }
   }
