--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,9 @@
 <footer id="footer">
-
-
+      <div class="documentation">
+        <ul>
+          <li><a href="#">? Documentation</a></li>
+          <li><a href="#">Raise an issue</a></li>
+        </ul>
       <div class="contact">
         <a href="phone:+65 6737 0321" class="phone"><i class="icon"><img src="{{root}}assets/img/icon-dark-small-phone.png" alt="phone icon" /></i>+65 6737 0321</a>
         <a href="mailto:support@bizcube.com.sg" class="email"><i class="icon"><img src="{{root}}assets/img/icon-dark-small-mail.png" alt="email icon" /></i>support@bizcube.com.sg</a>
