--- a/src/assets/scss/components/layout.scss
+++ b/src/assets/scss/components/layout.scss
@@ -58,6 +58,7 @@ html, body {
 
 #mainContent {
   grid-area: mc;
+  overflow-y: scroll;
 }
 
 @include breakpoint(medium) {
@@ -71,6 +72,7 @@ html, body {
 
   #footer {
     grid-area: f;
+    overflow: hidden;
   }
 }
 
