change class name for templates

--- a/src/layouts/columns-2.html
+++ b/src/layouts/columns-2.html
@@ -13,7 +13,7 @@
     {{> header-settings}}
 
   </head>
-  <body id="page-{{page}}" class="columns-2">
+  <body id="page-{{page}}" class="page-columns-2">
     <div id="main" class="">
       {{> header}}
       <div id="mainContent" class="">
