--- a/src/layouts/columns-3.html
+++ b/src/layouts/columns-3.html
@@ -12,7 +12,7 @@
     </title>
     {{> header-settings}}
   </head>
-  <body id="page-{{page}}" class="columns-3">
+  <body id="page-{{page}}" class="page-columns-3">
     <div id="main" class="">
       {{> header}}
       <div id="mainContent" class="">
