--- a/src/layouts/dashboard.html
+++ b/src/layouts/dashboard.html
@@ -12,7 +12,7 @@
     </title>
     {{> header-settings}}
   </head>
-  <body id="page-{{page}}" class="columns-dashboard">
+  <body id="page-{{page}}" class="page-dashboard">
     <div id="main" class="">
       {{> header}}
       <div id="mainContent" class="">
