updated footer styles

--- a/src/assets/scss/components/footer.scss
+++ b/src/assets/scss/components/footer.scss
@@ -1,18 +1,45 @@
 
 @include breakpoint(medium) {
   #footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
     border-top: 1px solid $complementary-light-color2;
   	background: $white;
-    display: block;
     font-size: $small-font-size;
   	padding: $global-padding $global-edge-padding;
 
     .contact {
       display: flex;
-      justify-content: center;
-      align-items: center;
+      flex-direction: row-row-reverse;
+
+      a {
+        margin: 0 0 0 .5rem;
+      }
     }
-  	a {
+    .documentation {
+
+      ul {
+        display: flex;
+        flex-direction: row;
+        margin: 0;
+        padding: 0;
+      }
+      li {
+        border-left: 1px solid $medium-gray;
+        list-style: none;
+        margin: 0;
+        padding: 0 .5rem;
+
+        &:first-child {
+          border: none;
+          padding-left: 0;
+        }
+      }
+    }
+    /*
+    a {
   		color: $black;
       display: inline-block;
   		margin: 0px 10px;
@@ -20,9 +47,7 @@
   			color: $dark-gray;
   		}
   	}
-    .contact {
-      text-align: center;
-    }
+    */
   }
 
 }
