added dashboard layout. added widgets style.

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -71,4 +71,6 @@
 @import 'components/packages';
 @import 'components/case';
 
+@import 'components/dashboard-widgets';
+
 @import 'components/login';
