update of widgets

--- a/src/assets/scss/components/dashboard-widgets.scss
+++ b/src/assets/scss/components/dashboard-widgets.scss
@@ -1,5 +1,17 @@
 #mainWidgets {
+  margin-bottom: $global-margin;
+  
+  h2 {
+    text-align: center;
+  }
+  footer {
+    display: flex;
+    justify-content: center;
 
+    a {
+      margin: 0 1rem;
+    }
+  }
 }
 #sideWidgets {
 
