added charts styling

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -72,5 +72,6 @@
 @import 'components/case';
 
 @import 'components/dashboard-widgets';
+@import 'components/charts';
 
 @import 'components/login';
