added sidebar styling

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -71,6 +71,7 @@
 @import 'components/packages';
 @import 'components/case';
 
+@import 'components/sidebar';
 @import 'components/dashboard-widgets';
 @import 'components/charts';
 
