--- a/src/assets/scss/components/dashboard-widgets.scss
+++ b/src/assets/scss/components/dashboard-widgets.scss
@@ -27,7 +27,44 @@
   }
 }
 #sideWidgets {
-
-
   background: $complementary-light-color1;
+  font-size: 80%;
+  padding: $global-padding;
+
+  .widget {
+    border-top: 1px solid $light-gray;
+    margin: 0 0 .5rem;
+    padding: .5rem 0 0;
+
+    &:first-child {
+      border: none;
+    }
+  }
+}
+#quickLinks {
+  ul {
+    margin-left: 0;
+  }
+  li {
+
+    list-style: none;
+    margin: 0 0 .8rem;
+  }
+
+}
+#calendar {
+  img {
+    width: 100%;
+  }
+}
+#reports {
+  ul {
+    //margin: 0 0 1.5rem;
+    //padding: 0;
+  }
+  li {
+    list-style: disc;
+    //margin: 0 0 0.5rem;
+    //padding: 0;
+  }
 }
