update min-width for breakpoint small and medium

--- a/src/assets/scss/components/charts.scss
+++ b/src/assets/scss/components/charts.scss
@@ -5,11 +5,18 @@
 
   .charts{
     display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
+    grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
   }
   .chart {
       text-align: center;
 
 
+  }
+}
+@include breakpoint(medium) {
+  #widget-charts {
+    .charts{
+      grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
+    }
   }
 }
