--- a/src/assets/scss/components/main.scss
+++ b/src/assets/scss/components/main.scss
@@ -35,12 +35,7 @@
 }
 
 ul.noBullets {
-	list-style: none;
-	margin-left: 0;
-
-	li {
-		padding-left: 0;
-	}
+	@include noBulletsList;
 }
 
 .icon img {
