--- a/src/assets/scss/components/sidebar.scss
+++ b/src/assets/scss/components/sidebar.scss
@@ -1,1 +1,20 @@
+.sidebar {
+  background: $complementary-light-color1;
+  font-size: 80%;
+  padding: $global-padding;
 
+  &.noBg {
+      background: none;
+      padding: 0;
+  }
+
+  .component, .widget {
+    border-top: 1px solid $light-gray;
+    margin: 0 0 .5rem;
+    padding: .5rem 0 0;
+
+    &:first-child {
+      border: none;
+    }
+  }
+}
