added a temporary style to force hide profile

--- a/src/assets/scss/components/profile.scss
+++ b/src/assets/scss/components/profile.scss
@@ -9,6 +9,12 @@
   }
 }
 
+#page-profile {
+  .profile {
+    display: none !important;
+  }
+}
+
 @include breakpoint(medium) {
   #profile {
     padding: 2rem 0;
