--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -74,5 +74,6 @@
 @import 'components/sidebar';
 @import 'components/dashboard-widgets';
 @import 'components/charts';
+@import 'components/listing-container';
 
 @import 'components/login';
