set new button colors and style

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -73,9 +73,9 @@ $contrast-color2: #008bdb;
 $foundation-palette: (
   primary: $contrast-color1,
   secondary: $contrast-color2,
-  success: #3adb76,
-  warning: #ffae00,
-  alert: #cc4b37,
+  success: #57ea95,
+  warning: #ff9141,
+  alert: #d11414,
 );
 $light-gray: #ececec;
 $medium-gray: #cacaca;
