remove h1 margin for mainContent layout

--- a/src/assets/scss/components/layout.scss
+++ b/src/assets/scss/components/layout.scss
@@ -94,6 +94,7 @@ html, body {
     h1 {
       grid-area: t;
       align-self: flex-end;
+      margin: 0;
     }
 
     #mainWidgets {
@@ -145,6 +146,7 @@ html, body {
     h1 {
       grid-area: t;
       align-self: flex-end;
+      margin: 0;
     }
     .profile {
       grid-area: p;
@@ -210,6 +212,7 @@ html, body {
     h1 {
       grid-area: t;
       align-self: flex-end;
+      margin: 0;
     }
     .profile {
       grid-area: p;
