--- a/src/assets/scss/components/sidebar.scss
+++ b/src/assets/scss/components/sidebar.scss
@@ -1,8 +1,24 @@
 .sidebar {
   background: $complementary-light-color1;
-  font-size: 80%;
+  font-size: 0.8rem;
   padding: $global-padding;
 
+  $header-styles: (
+    'small': (
+      'h2': ('font-size': 18),
+      'h3': ('font-size': 16),
+      'h4': ('font-size': 14),
+      'h5': ('font-size': 12),
+      'h6': ('font-size': 10)
+    ),
+    'medium': (
+    'h2': ('font-size': 20),
+    'h3': ('font-size': 18),
+    'h4': ('font-size': 16),
+    'h5': ('font-size': 14),
+    'h6': ('font-size': 12)
+    )
+  );
   &.noBg {
       background: none;
       padding: 0;
