--- a/src/assets/scss/components/form.scss
+++ b/src/assets/scss/components/form.scss
@@ -1,4 +1,6 @@
 form,.form, .formTextContainer {
+  max-width: 800px;
+
 
   footer {
     margin: $global-margin*0.5 0;
@@ -24,18 +26,29 @@ form,.form, .formTextContainer {
   input[type=email],
   select,
   textarea {
+    border-radius: 0;
+    border: none;
+    border-bottom: 3px solid $light-gray;
+    box-shadow: 0 0;
+    height: 3.5rem;
+    padding: 1rem 0.8rem 0.5rem;
+    /*
     background: rgb(255,255,255);
     background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(236,236,236,1) 100%);
     background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(236,236,236,1) 100%);
     background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(236,236,236,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ececec',GradientType=0 );
-
+    */
     &:focus {
-      border: 1px solid $complementary-dark-color2;
+      border-radius: 0;
+      border: none;
+      border-bottom: 3px solid $medium-gray;
+      box-shadow: 0 0;
+      background: lighten($contrast-color1,30);
     }
   }
   textarea {
-    height: 110px;
+    height: 180px;
   }
 
   input[type=text].noBox,
@@ -50,14 +63,19 @@ form,.form, .formTextContainer {
     border-radius: 0;
   }
 
-  .checkboxGroup,.radioGroup {
+  .checkboxGroup,
+  .radioGroup {
     display: flex;
     flex-direction: column;
+    align-items: baseline;
     margin-bottom: $global-margin;
 
+    input[type='radio'],
+    input[type='checkbox'], {
+      margin: 0 0.5rem 0 0;
+    }
     label {
-      display: block;
-      margin: 0 1rem 0.2rem 0;
+      margin: 0 $global-margin $global-margin 0;
     }
   }
 
@@ -114,9 +132,9 @@ form,.form, .formTextContainer {
 }
 
 @include breakpoint(medium) {
-  form,.form {
-    .checkboxGroup,.radioGroup {
-
+  form,.form, .formTextContainer {
+    .radioGroup,
+    .checkboxGroup {
       flex-direction: row;
     }
   }
